<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_movie_details_background">


    <ImageView
        android:id="@+id/fragment_movies_details_background_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/background_fragment_movies_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/fragment_movies_details_mask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/mask_fragment_movies_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/fragment_movies_details_play_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/play_shape_fragment_movies_details"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_movies_details_background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/fragment_movies_details_favorite"
        android:layout_width="@dimen/favourite_image_width"
        android:layout_height="@dimen/favourite_image_height"
        android:layout_marginTop="@dimen/fragment_movies_details_favourite_top_margin"
        android:layout_marginEnd="@dimen/fragment_movies_details_middle_margin"
        android:src="@drawable/ic_favorite_filed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/fragment_movies_details_image_back"
        android:layout_width="@dimen/fragment_movies_details_back_img_width"
        android:layout_height="@dimen/fragment_movies_details_back_img_height"
        android:layout_marginStart="@dimen/fragment_movies_details_back_img_start_margin"
        android:layout_marginTop="@dimen/fragment_movies_details_back_img_top_margin"
        android:src="@drawable/back_icon_fragment_movies_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/fragment_movies_details_back_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_movies_details_back_text_margin"
        android:text="@string/fragment_movies_details_back_text"
        android:textColor="@color/fragment_movies_details_back_text_color"
        android:textSize="@dimen/fragment_movies_details_back_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_movies_details_image_back"
        app:layout_constraintStart_toEndOf="@+id/fragment_movies_details_image_back"
        app:layout_constraintTop_toTopOf="@+id/fragment_movies_details_image_back"
        />

    <TextView
        android:id="@+id/fragment_movies_details_age_limitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_movies_details_adult_top_margin"
        android:text="@string/fragment_movies_details_adult_text"
        android:textColor="@color/white"
        android:textSize="@dimen/fragment_movies_details_adult_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/fragment_movies_details_movie_title"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/fragment_movies_details_movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fragment_movies_details_middle_margin"
        android:text="@string/fragment_movies_details_movie_name"
        android:textColor="@color/white"
        android:textSize="@dimen/fragment_movies_details_title_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_movies_details_background_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_movies_details_background_image"
        />

    <TextView
        android:id="@+id/fragment_movies_details_movie_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_movies_details_genre_text"
        android:textColor="@color/fragment_movies_details_genre_color"
        app:layout_constraintStart_toStartOf="@+id/fragment_movies_details_movie_title"
        app:layout_constraintTop_toBottomOf="@+id/fragment_movies_details_movie_title"
        />

    <RatingBar
        android:id="@+id/fragment_movies_details_rating"
        style="@style/MyRatingBarForDetails"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/fragment_movies_details_rating_height"
        android:layout_marginTop="8dp"
        android:numStars="5"
        android:rating="2"
        android:stepSize="0.5"
        app:layout_constraintStart_toStartOf="@+id/fragment_movies_details_movie_genre"
        app:layout_constraintTop_toBottomOf="@+id/fragment_movies_details_movie_genre"
        />

    <TextView
        android:id="@+id/fragment_movies_details_storyline_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_movies_details_storyline_title_top_margin"
        android:text="@string/fragment_movies_details_storyline_title"
        android:textColor="@color/white"
        android:textSize="@dimen/fragment_movies_details_adult_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/fragment_movies_details_movie_title"
        app:layout_constraintTop_toBottomOf="@+id/fragment_movies_details_rating"
        />

    <TextView
        android:id="@+id/fragment_movies_details_storyline_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_movies_details_storyline_text_top_margin"
        android:text="@string/fragment_movies_details_storyline_text"
        android:textColor="@color/white"
        android:textSize="@dimen/fragment_movies_details_adult_text_size"
        app:layout_constraintStart_toStartOf="@+id/fragment_movies_details_movie_title"
        app:layout_constraintTop_toBottomOf="@+id/fragment_movies_details_storyline_title"
        />

    <TextView
        android:id="@+id/fragment_movies_details_cast_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_movies_details_cast_start_margin"
        android:layout_marginTop="@dimen/fragment_movies_details_cast_top_margin"
        android:text="@string/fragment_movies_details_cast_text_view"
        android:textColor="@color/white"
        android:textSize="@dimen/fragment_movies_details_adult_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/fragment_movies_details_see_all_title"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_movies_details_storyline_text"
        />

    <TextView
        android:id="@+id/fragment_movies_details_see_all_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fragment_movies_details_cast_start_margin"
        android:text="@string/fragment_movies_details_see_all_text_view"
        android:textColor="@color/white"
        android:textSize="@dimen/fragment_movies_details_adult_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragment_movies_details_cast_title"
        app:layout_constraintTop_toTopOf="@+id/fragment_movies_details_cast_title"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_movies_details_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_holder_actor_photo_top_margin"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_movies_details_cast_title"
        />

</androidx.constraintlayout.widget.ConstraintLayout>